# quickstart-docs-snippets

./: .gitignore  README.md
.claude/: settings.local.json
rust/: Cargo.toml  rust-toolchain.toml
rust/src/: lib.rs
typescript/: direct-match.ts  package.json  solver-rfq.ts  tsconfig.json
